--- a/people.html
+++ b/people.html
@@ -246,7 +246,7 @@
 										<header>
 											<h3>UW-Madison: Prof. Dr. Lingjun Li</h3>
 										</header>
-										<p><strong>Specialist</strong>: Quantitative Peptidomics and Proteomics</p>
+										<p><strong>Specialist</strong>: Quantitative Neuropeptidomics</p>
 									</section>
 
 							</div>
