--- a/research.html
+++ b/research.html
@@ -50,10 +50,10 @@
 								<article class="box post">
 									<header>
 										<h2><strong>"More Native" Structural Mass Spectrometry:</strong> </h2>
-										<h2><strong>Rapid + Lossless + High-resolution +++ </strong> </h2>
+										<h2><strong><font color='red'>Rapid</font> + <font color='green'>Lossless</font> + <font color='blue'>High-resolution</font> +++ </strong> </h2>
 									</header>
 									<a class="image featured"><img src="images/limslab_logo_full.jpg" width="50%" height="50%" alt="" /></a>
-									<h3>Rapid: In-cell MS</h3>
+									<h3><U><strong><font color='red'>Rapid: In-cell MS</font></strong></U></h3>
 									<p>Dr. Li has the long-standing research interest focusing on the development 
 									and application of ultrafast separation techniques capable of in situ purification 
 									and identification of native proteins directly from living cells. As such, one needs 
