--- a/news.html
+++ b/news.html
@@ -63,7 +63,7 @@
 																<h3><a href="news.html">LimsLab Group Site Gets Online!</a></h3>
 															</header>
 															<p>We are SO excited to share this unique research group (<strong>LimsLab @ NKU</strong>) site to the whole
-															world. The LimsLab group site has been officially released on Oct 2nd, 2020. Hello, World! </p>
+															world. The LimsLab group site has been officially released on Oct 2nd, 2020. Hello, World! Hello, LimsLab! </p>
 														</article>
 
 												</li>
