--- a/publication.html
+++ b/publication.html
@@ -60,97 +60,97 @@
 									Yatao Shi, Miyang Li, Bin Wang, Nathan V. Welham, Manish S. Patankar, and Lingjun Li*. 
 									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.0c02704#"><U>On-tissue 
 									derivatization for matrix-assisted laser desorption/ionization mass spectrometry imaging of N-glycans in cancer tissues.
-									</a></U> <strong><i>Anal. Chem. </i></strong> 2020, xx, xxx-xxx. <br>
-									<strong>23</strong>. Gaoyuan Lu, Xiaowei Xu,<strong>Gongyu Li</strong>, Nian Wang, Yinxue Zhu, 
+									</a></U> <strong><i>Anal. Chem. </i></strong> 2020, xx, xxx-xxx. </p>
+									<p><strong>23</strong>. Gaoyuan Lu, Xiaowei Xu,<strong>Gongyu Li</strong>, Nian Wang, Yinxue Zhu, 
 									Ning Wan, Yatao Shi, Lingjun Li, Haiping Hao*, and Hui Ye*. 
 									<a href="https://pubs.acs.org/doi/abs/10.1021/acs.analchem.9b03827"><U>Sub-residue Resolution 
 									Footprinting of Ligand-Protein Interactions by Carbene Chemistry and Ion Mobility-Mass Spectrometry.
-									</a></U> <strong><i>Anal. Chem. </i></strong> 2020, 92, 947-956. <br>
-									<strong>22</strong>. <strong>Gongyu Li</strong>, Fengfei Ma, Qinjingwen Cao, Zhen Zheng, Kellen DeLaney, Rui Liu and Lingjun Li*. 
+									</a></U> <strong><i>Anal. Chem. </i></strong> 2020, 92, 947-956. </p>
+									<p><strong>22</strong>. <strong>Gongyu Li</strong>, Fengfei Ma, Qinjingwen Cao, Zhen Zheng, Kellen DeLaney, Rui Liu and Lingjun Li*. 
 									<a href="https://www.nature.com/articles/s41467-019-12548-0"><U>Nanosecond 
 									Photochemically Promoted Click Chemistry for Enhanced Neuropeptide Visualization and Rapid Protein Labeling.
-									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 4697. <br>
+									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 4697. </br>
 									[FEATURED in <a href="https://www.nature.com/collections/wdzvyhgxft/content/julia-eckhoff"><i><strong><font color='red'>Nature Communications Editors’ HIGHLIGHTS</font></strong></i></a>.]<br>
 									[<a href="https://f1000.com/prime/article?articleId=736760491&target=/prime/736760491#tab=abstract"><i><strong><font color='red'>F1000Prime Recommendation</font></strong></i></a>: being of SPECIAL SIGNIFICANCE in its field.]<br>
-									[Behind the Paper: <a href="https://chemistrycommunity.nature.com/users/325305-gongyu-li/posts/55152-mass-spectrometry-fuels-nanosecond-photochemistry"><i><strong><font color='red'>Mass Spectrometry Fuels Nanosecond Photochemistry</font></strong></i></a>]<br>
-									<strong>21</strong>. <strong>Gongyu Li</strong>, Kellen DeLaney, and Lingjun Li*. 
+									[Behind the Paper: <a href="https://chemistrycommunity.nature.com/users/325305-gongyu-li/posts/55152-mass-spectrometry-fuels-nanosecond-photochemistry"><i><strong><font color='red'>Mass Spectrometry Fuels Nanosecond Photochemistry</font></strong></i></a>]</p>
+									<p><strong>21</strong>. <strong>Gongyu Li</strong>, Kellen DeLaney, and Lingjun Li*. 
 									<a href="https://www.nature.com/articles/s41467-019-12346-8"><U>Molecular Basis 
 									for Chirality-regulated Aβ Self-Assembly and Receptor Recognition.
-									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 5038. <br>
-									<strong>20</strong>. <strong>Gongyu Li</strong>, Daniel Delafield, and Lingjun Li*. 
+									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 5038. </p>
+									<p><strong>20</strong>. <strong>Gongyu Li</strong>, Daniel Delafield, and Lingjun Li*. 
 									<a href="https://www.sciencedirect.com/science/article/pii/S016599361830654X?via%3Dihub"><U>Improved 
 									Structural Elucidation of Peptide Isomers and Their Receptors Using Advanced Ion Mobility-Mass Spectrometry..
 									</a></U> <strong><i>Trends Anal. Chem. </i></strong> 2020, 124, 115546. <br>
-									[<i><strong><font color='red'>Invited Review</font></strong></i>.]<br>
-									<strong>19</strong>. Qinjingwen Cao, Yijia Wang, Bingming Chen, Fengfei Ma, Ling Hao,<strong>Gongyu Li</strong>, 
+									[<i><strong><font color='red'>Invited Review</font></strong></i>.]</p>
+									<p><strong>19</strong>. Qinjingwen Cao, Yijia Wang, Bingming Chen, Fengfei Ma, Ling Hao,<strong>Gongyu Li</strong>, 
 									Chuanzi Ouyang, and Lingjun Li*. 
 									<a href="https://pubs.acs.org/doi/10.1021/acschemneuro.8b00730"><U>Visualization 
 									and Identification of Neurotransmitters in Crustacean Brain via Multifaceted Mass Spectrometric Approaches.
-									</a></U> <strong><i>ACS Chem. Neurosci. </i></strong> 2019, 10, 1222-1229. <br>
-									<strong>18</strong>. <strong>Gongyu Li</strong>, Qinjingwen Cao, Yang Liu, Kellen DeLaney, Zichuan Tian, Eugene Moskovets and Lingjun Li*.  
+									</a></U> <strong><i>ACS Chem. Neurosci. </i></strong> 2019, 10, 1222-1229. </p>
+									<p><strong>18</strong>. <strong>Gongyu Li</strong>, Qinjingwen Cao, Yang Liu, Kellen DeLaney, Zichuan Tian, Eugene Moskovets and Lingjun Li*.  
 									<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rcm.8358"><U>Characterizing and Alleviating 
 									Ion Suppression Effects in Atmospheric Pressure Matrix-Assisted Laser Desorption/Ionization (AP-MALDI).
-									</a></U> <strong><i>Rapid Commun. Mass Spectrom. </i></strong> 2019, 33, 327-335. <br>
-									<strong>17</strong>. Yuting Chen,‡ <strong>Gongyu Li‡</strong>, Siming Yuan, Yang Pan, Yangzhong Liu and Guangming Huang*. 
+									</a></U> <strong><i>Rapid Commun. Mass Spectrom. </i></strong> 2019, 33, 327-335. </p>
+									<p><strong>17</strong>. Yuting Chen,‡ <strong>Gongyu Li‡</strong>, Siming Yuan, Yang Pan, Yangzhong Liu and Guangming Huang*. 
 									<a href="https://pubs.acs.org/doi/abs/10.1021/acs.analchem.9b00716"><U>Ultrafast Micro-Electrophoresis: 
 									Behind Direct Mass Spectrometry Measurement for Proteins and Metabolites in Living Cell/Cells.
-									</a></U> <strong><i>Anal. Chem.  </i></strong> 2019, 91, 10441-10447. (‡, co-first author) <br>
-									<strong>16</strong>. Shihui Zheng, Siming Yuan, Zhuanghao Hou,<strong>Gongyu Li</strong>, Yuting Chen, Yang Pan, Yangzhong Liu and Guangming Huang*. 
+									</a></U> <strong><i>Anal. Chem.  </i></strong> 2019, 91, 10441-10447. (‡, co-first author) </p>
+									<p><strong>16</strong>. Shihui Zheng, Siming Yuan, Zhuanghao Hou,<strong>Gongyu Li</strong>, Yuting Chen, Yang Pan, Yangzhong Liu and Guangming Huang*. 
 									<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rcm.8493"><U>Charge-dependent modulation of specific and 
 									nonspecific protein-metal ion interactions in nanoelectrospray ionization mass spectrometry.
-									</a></U> <strong><i>Rapid Commun. Mass Spectrom. </i></strong> 2019, 33, 1502. <br>
-									<strong>15</strong>. Tiantian Fang, Wanbiao Chen, Yaping Sheng, Siming Yuan, Qiaowei Tang,<strong>Gongyu Li</strong>, Guangming Huang, Jihu Su, Xuan Zhang,* Jianye Zang,* and Yangzhong Liu*. 
+									</a></U> <strong><i>Rapid Commun. Mass Spectrom. </i></strong> 2019, 33, 1502. </p>
+									<p><strong>15</strong>. Tiantian Fang, Wanbiao Chen, Yaping Sheng, Siming Yuan, Qiaowei Tang,<strong>Gongyu Li</strong>, Guangming Huang, Jihu Su, Xuan Zhang,* Jianye Zang,* and Yangzhong Liu*. 
 									<a href="https://www.nature.com/articles/s41467-018-08102-z"><U>Tetrathiomolybdate Induces Dimerization 
 									of the Metal-binding Domain of ATPase and Inhibits Platination of the Protein.
-									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 186. <br>
-									<strong>14</strong>. <strong>Gongyu Li‡</strong>, Shihui Zheng,‡ Yuting Chen, Zhuanghao Hou and Guangming Huang*. 
+									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 186. </p>
+									<p><strong>14</strong>. <strong>Gongyu Li‡</strong>, Shihui Zheng,‡ Yuting Chen, Zhuanghao Hou and Guangming Huang*. 
 									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.8b00859"><U>Reliable Tracking In-solution 
 									Protein Unfolding via Ultrafast Thermal Unfolding/Ion Mobility-Mass Spectrometry.
-									</a></U> <strong><i>Anal. Chem. </i></strong> 2018, 90, 7997-8001. <br>
-									<strong>13</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan,‡ Shihui Zheng, Yangzhong Liu* and Guangming Huang*. 
+									</a></U> <strong><i>Anal. Chem. </i></strong> 2018, 90, 7997-8001. (‡, co-first author) </p>
+									<p><strong>13</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan,‡ Shihui Zheng, Yangzhong Liu* and Guangming Huang*. 
 									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.7b05055"><U>In-situ Living Cell 
 									Protein Analysis by Single-step Mass Spectrometry.
-									</a></U> <strong><i>Anal. Chem. </i></strong> 2018, 90, 3409-3415. <br>
-									<strong>12</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan,‡ Shihui Zheng, Yuting Chen, Zhen Zheng, Yangzhong Liu* and Guangming Huang*. 
+									</a></U> <strong><i>Anal. Chem. </i></strong> 2018, 90, 3409-3415. (‡, co-first author)</p>
+									<p><strong>12</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan,‡ Shihui Zheng, Yuting Chen, Zhen Zheng, Yangzhong Liu* and Guangming Huang*. 
 									<a href="https://link.springer.com/article/10.1007%2Fs13361-017-1789-6"><U>The effect of salts in promoting specific 
 									and competitive interactions between zinc finger proteins and metals.
-									</a></U> <strong><i>J. Am. Soc. Mass Spectrom. </i></strong> 2017, 28, 2658-2664. (‡, co-first author)  <br>
-									<strong>11</strong>. Zhen Zheng,‡ Peiyao Chen,‡<strong>Gongyu Li</strong>, Yunxia Zhu,‡ Zhonghua Shi, Yufeng Luo, Chun Zhao, Ziyi Fu, Xianwei Cui, Chenbo Ji, Fuqiang Wang,* Guangming Huang* and Gaolin Liang*.  
+									</a></U> <strong><i>J. Am. Soc. Mass Spectrom. </i></strong> 2017, 28, 2658-2664. (‡, co-first author)  </p>
+									<p><strong>11</strong>. Zhen Zheng,‡ Peiyao Chen,‡<strong>Gongyu Li</strong>, Yunxia Zhu,‡ Zhonghua Shi, Yufeng Luo, Chun Zhao, Ziyi Fu, Xianwei Cui, Chenbo Ji, Fuqiang Wang,* Guangming Huang* and Gaolin Liang*.  
 									<a href="http://pubs.rsc.org/en/content/articlelanding/2016/sc/c6sc01461e"><U>Mechanistic study of CBT-Cys click reaction 
 									and its application for identifying bioactive N-terminal cysteine peptides in amniotic fluid.
-									</a></U> <strong><i>Chem. Sci. </i></strong> 2017, 8, 214-222. (‡, co-first author) <br>
-									<strong>10</strong>. Zhen Zheng, <strong>Gongyu Li</strong>, Chengfan Wu, Miaomiao Zhang, Yue Zhao, and Gaolin Liang*. 
+									</a></U> <strong><i>Chem. Sci. </i></strong> 2017, 8, 214-222. (‡, co-first author) </p>
+									<p><strong>10</strong>. Zhen Zheng, <strong>Gongyu Li</strong>, Chengfan Wu, Miaomiao Zhang, Yue Zhao, and Gaolin Liang*. 
 									<a href="http://pubs.rsc.org/en/content/articlelanding/2017/cc/c7cc00999b#!divAbstract"><U>Intracellular synthesis of 
 									D-aminoluciferin for bioluminescence generation.
-									</a></U> <strong><i>Chem. Commun. </i></strong> 2017, 53, 3567-3570. <br>
-									<strong>9</strong>. <strong>Gongyu Li</strong>, Siming Yuan, Yang Pan, Yangzhong Liu and Guangming Huang*.  
+									</a></U> <strong><i>Chem. Commun. </i></strong> 2017, 53, 3567-3570. </p>
+									<p><strong>9</strong>. <strong>Gongyu Li</strong>, Siming Yuan, Yang Pan, Yangzhong Liu and Guangming Huang*.  
 									<a href="http://pubs.acs.org/doi/abs/10.1021/acs.analchem.6b00032"><U>Binding states of protein-metal complexes in cells.
-									</a></U> <strong><i>Anal. Chem. </i></strong> 2016, 88, 10860-10866. <br>
-									<strong>8</strong>. Yue Yin, <strong>Gongyu Li</strong>, Yafeng Guan and Guangming Huang*. 
+									</a></U> <strong><i>Anal. Chem. </i></strong> 2016, 88, 10860-10866. </p>
+									<p><strong>8</strong>. Yue Yin, <strong>Gongyu Li</strong>, Yafeng Guan and Guangming Huang*. 
 									<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/rcm.7621"><U>Sheathless interface to match 
 									flow rate of capillary electrophoresis with electrospray mass spectrometry using regular-sized capillary.
-									</a></U> <strong><i>Rapid Commun. Mass Spectrom. </i></strong> 2016, 30 Suppl 1, 68-72. <br>
-									<strong>7</strong>. Zhen Zheng, Hongbin Sun, Chen Hu, <strong>Gongyu Li</strong>, Xiaomei Liu, Peiyao Chen, Yusi Cui, Jing Liu, Junfeng Wang, and Gaolin Liang*. 
+									</a></U> <strong><i>Rapid Commun. Mass Spectrom. </i></strong> 2016, 30 Suppl 1, 68-72. </p>
+									<p><strong>7</strong>. Zhen Zheng, Hongbin Sun, Chen Hu, <strong>Gongyu Li</strong>, Xiaomei Liu, Peiyao Chen, Yusi Cui, Jing Liu, Junfeng Wang, and Gaolin Liang*. 
 									<a href="http://pubsdc3.acs.org/doi/full/10.1021/acs.analchem.6b00036"><U>Using "On/Off" FNMR/MRI signals 
 									to sense tyrosine kinase/phosphatase activity in vitro and in cell lysates.
-									</a></U> <strong><i>Anal. Chem. </i></strong> 2016, 88, 3363-3368. <br>
-									<strong>6</strong>. Zhen Zheng, Lin Wang, Wei Tang, Peiyao Chen, Hui Zhu, Yue Yuan, <strong>Gongyu Li</strong>, Huafeng Zhang, Gaolin Liang*. 
+									</a></U> <strong><i>Anal. Chem. </i></strong> 2016, 88, 3363-3368. </p>
+									<p><strong>6</strong>. Zhen Zheng, Lin Wang, Wei Tang, Peiyao Chen, Hui Zhu, Yue Yuan, <strong>Gongyu Li</strong>, Huafeng Zhang, Gaolin Liang*. 
 									<a href="http://www.sciencedirect.com/science/article/pii/S0956566316303426?np=y"><U>Hydrazide D-luciferin for 
 									in vitro selective detection and intratumoral imaging of Cu2+.
-									</a></U> <strong><i>Biosens. Bioelectron. </i></strong> 2016, 83, 200-204. <br>
-									<strong>5</strong>. <strong>Gongyu Li</strong>, Jiying Pei, Yue Yin and Guangming Huang*.  
+									</a></U> <strong><i>Biosens. Bioelectron. </i></strong> 2016, 83, 200-204. </p>
+									<p><strong>5</strong>. <strong>Gongyu Li</strong>, Jiying Pei, Yue Yin and Guangming Huang*.  
 									<a href="http://pubs.rsc.org/en/Content/ArticleLanding/2015/AN/C5AN00011D#!divRelatedContent"><U>Direct sequencing of a 
 									disulfide-linked peptide with electrospray ionization tandem mass spectrometry.
-									</a></U> <strong><i>Analyst </i></strong> 2015, 140, 2623-2627. <br>
-									<strong>4</strong>. <strong>Gongyu Li</strong> and Guangming Huang*. 
+									</a></U> <strong><i>Analyst </i></strong> 2015, 140, 2623-2627. </p>
+									<p><strong>4</strong>. <strong>Gongyu Li</strong> and Guangming Huang*. 
 									<a href="http://onlinelibrary.wiley.com/doi/10.1002/jms.3385/abstract;jsessionid=7AC0A2B037BA600A8BF42DBAF07D805B.f01t01"><U>Alleviation of 
 									ion suppression effect in sonic spray ionization with induced alternating current voltage.
-									</a></U> <strong><i>J. Mass Spectrom. </i></strong> 2014, 49, 639-645. <br>
-									<strong>3</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									</a></U> <strong><i>J. Mass Spectrom. </i></strong> 2014, 49, 639-645. </p>
+									<p><strong>3</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
 									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
 									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
-									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
-									<strong>2</strong>. Hongying Zhu, <strong>Gongyu Li</strong>, Guangming Huang*. 
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. </p>
+									<p><strong>2</strong>. Hongying Zhu, <strong>Gongyu Li</strong>, Guangming Huang*. 
 									<a href="http://rd.springer.com/article/10.1007%2Fs13361-014-0862-7"><U>Screening of 
 									complicated matrixes with paper assisted ultrasonic spray ionization mass spectrometry.
 									</a></U> <strong><i>J. Am. Soc. Mass Spectrom. </i></strong> 2014, 25, 935-942.</p>
