--- a/publication.html
+++ b/publication.html
@@ -115,7 +115,7 @@
 									<a href="https://link.springer.com/article/10.1007%2Fs13361-017-1789-6"><U>The effect of salts in promoting specific 
 									and competitive interactions between zinc finger proteins and metals.
 									</a></U> <strong><i>J. Am. Soc. Mass Spectrom. </i></strong> 2017, 28, 2658-2664. (‡, co-first author)  </p>
-									<p><strong>11</strong>. Zhen Zheng,‡ Peiyao Chen,‡<strong>Gongyu Li</strong>, Yunxia Zhu,‡ Zhonghua Shi, Yufeng Luo, Chun Zhao, Ziyi Fu, Xianwei Cui, Chenbo Ji, Fuqiang Wang,* Guangming Huang* and Gaolin Liang*.  
+									<p><strong>11</strong>. Zhen Zheng‡, Peiyao Chen‡, <strong>Gongyu Li‡</strong>, Yunxia Zhu‡, Zhonghua Shi, Yufeng Luo, Chun Zhao, Ziyi Fu, Xianwei Cui, Chenbo Ji, Fuqiang Wang,* Guangming Huang* and Gaolin Liang*.  
 									<a href="http://pubs.rsc.org/en/content/articlelanding/2016/sc/c6sc01461e"><U>Mechanistic study of CBT-Cys click reaction 
 									and its application for identifying bioactive N-terminal cysteine peptides in amniotic fluid.
 									</a></U> <strong><i>Chem. Sci. </i></strong> 2017, 8, 214-222. (‡, co-first author) </p>
