--- a/publication.html
+++ b/publication.html
@@ -91,7 +91,7 @@
 									<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rcm.8358"><U>Characterizing and Alleviating 
 									Ion Suppression Effects in Atmospheric Pressure Matrix-Assisted Laser Desorption/Ionization (AP-MALDI).
 									</a></U> <strong><i>Rapid Commun. Mass Spectrom. </i></strong> 2019, 33, 327-335. </p>
-									<p><strong>17</strong>. Yuting Chen,‡ <strong>Gongyu Li‡</strong>, Siming Yuan, Yang Pan, Yangzhong Liu and Guangming Huang*. 
+									<p><strong>17</strong>. Yuting Chen‡, <strong>Gongyu Li‡</strong>, Siming Yuan, Yang Pan, Yangzhong Liu and Guangming Huang*. 
 									<a href="https://pubs.acs.org/doi/abs/10.1021/acs.analchem.9b00716"><U>Ultrafast Micro-Electrophoresis: 
 									Behind Direct Mass Spectrometry Measurement for Proteins and Metabolites in Living Cell/Cells.
 									</a></U> <strong><i>Anal. Chem.  </i></strong> 2019, 91, 10441-10447. (‡, co-first author) </p>
@@ -103,15 +103,15 @@
 									<a href="https://www.nature.com/articles/s41467-018-08102-z"><U>Tetrathiomolybdate Induces Dimerization 
 									of the Metal-binding Domain of ATPase and Inhibits Platination of the Protein.
 									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 186. </p>
-									<p><strong>14</strong>. <strong>Gongyu Li‡</strong>, Shihui Zheng,‡ Yuting Chen, Zhuanghao Hou and Guangming Huang*. 
+									<p><strong>14</strong>. <strong>Gongyu Li‡</strong>, Shihui Zheng‡, Yuting Chen, Zhuanghao Hou and Guangming Huang*. 
 									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.8b00859"><U>Reliable Tracking In-solution 
 									Protein Unfolding via Ultrafast Thermal Unfolding/Ion Mobility-Mass Spectrometry.
 									</a></U> <strong><i>Anal. Chem. </i></strong> 2018, 90, 7997-8001. (‡, co-first author) </p>
-									<p><strong>13</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan,‡ Shihui Zheng, Yangzhong Liu* and Guangming Huang*. 
+									<p><strong>13</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan‡, Shihui Zheng, Yangzhong Liu* and Guangming Huang*. 
 									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.7b05055"><U>In-situ Living Cell 
 									Protein Analysis by Single-step Mass Spectrometry.
 									</a></U> <strong><i>Anal. Chem. </i></strong> 2018, 90, 3409-3415. (‡, co-first author)</p>
-									<p><strong>12</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan,‡ Shihui Zheng, Yuting Chen, Zhen Zheng, Yangzhong Liu* and Guangming Huang*. 
+									<p><strong>12</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan‡, Shihui Zheng, Yuting Chen, Zhen Zheng, Yangzhong Liu* and Guangming Huang*. 
 									<a href="https://link.springer.com/article/10.1007%2Fs13361-017-1789-6"><U>The effect of salts in promoting specific 
 									and competitive interactions between zinc finger proteins and metals.
 									</a></U> <strong><i>J. Am. Soc. Mass Spectrom. </i></strong> 2017, 28, 2658-2664. (‡, co-first author)  </p>
