--- a/publication.html
+++ b/publication.html
@@ -72,11 +72,13 @@
 									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 4697. </br>
 									[FEATURED in <a href="https://www.nature.com/collections/wdzvyhgxft/content/julia-eckhoff"><i><strong><font color='red'>Nature Communications Editors’ HIGHLIGHTS</font></strong></i></a>.]<br>
 									[<a href="https://f1000.com/prime/article?articleId=736760491&target=/prime/736760491#tab=abstract"><i><strong><font color='red'>F1000Prime Recommendation</font></strong></i></a>: being of SPECIAL SIGNIFICANCE in its field.]<br>
-									[Behind the Paper: <a href="https://chemistrycommunity.nature.com/users/325305-gongyu-li/posts/55152-mass-spectrometry-fuels-nanosecond-photochemistry"><i><strong><font color='red'>Mass Spectrometry Fuels Nanosecond Photochemistry</font></strong></i></a>]</p>
+									[Behind the Paper: <a href="https://chemistrycommunity.nature.com/users/325305-gongyu-li/posts/55152-mass-spectrometry-fuels-nanosecond-photochemistry"><i><strong><font color='red'>Mass Spectrometry Fuels Nanosecond Photochemistry</font></strong></i></a>]<br>
+									[<i><strong><font color='red'>Rapid SMS</font></strong></i>.]</p>
 									<p><strong>21</strong>. <strong>Gongyu Li</strong>, Kellen DeLaney, and Lingjun Li*. 
 									<a href="https://www.nature.com/articles/s41467-019-12346-8"><U>Molecular Basis 
 									for Chirality-regulated Aβ Self-Assembly and Receptor Recognition.
-									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 5038. </p>
+									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 5038. <br>
+									[<i><strong><font color='red'>High-resolution IM-MS</font></strong></i>.]</p>
 									<p><strong>20</strong>. <strong>Gongyu Li</strong>, Daniel Delafield, and Lingjun Li*. 
 									<a href="https://www.sciencedirect.com/science/article/pii/S016599361830654X?via%3Dihub"><U>Improved 
 									Structural Elucidation of Peptide Isomers and Their Receptors Using Advanced Ion Mobility-Mass Spectrometry..
@@ -94,7 +96,8 @@
 									<p><strong>17</strong>. Yuting Chen‡, <strong>Gongyu Li‡</strong>, Siming Yuan, Yang Pan, Yangzhong Liu and Guangming Huang*. 
 									<a href="https://pubs.acs.org/doi/abs/10.1021/acs.analchem.9b00716"><U>Ultrafast Micro-Electrophoresis: 
 									Behind Direct Mass Spectrometry Measurement for Proteins and Metabolites in Living Cell/Cells.
-									</a></U> <strong><i>Anal. Chem.  </i></strong> 2019, 91, 10441-10447. (‡, co-first author) </p>
+									</a></U> <strong><i>Anal. Chem.  </i></strong> 2019, 91, 10441-10447. (‡, co-first author) <br>
+									[<i><strong><font color='red'>In-cell MS: Further Mechanism</font></strong></i>.]</p>
 									<p><strong>16</strong>. Shihui Zheng, Siming Yuan, Zhuanghao Hou,<strong>Gongyu Li</strong>, Yuting Chen, Yang Pan, Yangzhong Liu and Guangming Huang*. 
 									<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rcm.8493"><U>Charge-dependent modulation of specific and 
 									nonspecific protein-metal ion interactions in nanoelectrospray ionization mass spectrometry.
@@ -110,7 +113,8 @@
 									<p><strong>13</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan‡, Shihui Zheng, Yangzhong Liu* and Guangming Huang*. 
 									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.7b05055"><U>In-situ Living Cell 
 									Protein Analysis by Single-step Mass Spectrometry.
-									</a></U> <strong><i>Anal. Chem. </i></strong> 2018, 90, 3409-3415. (‡, co-first author)</p>
+									</a></U> <strong><i>Anal. Chem. </i></strong> 2018, 90, 3409-3415. (‡, co-first author)<br>
+									[<i><strong><font color='red'>In-cell MS: Workflow</font></strong></i>.]</p>
 									<p><strong>12</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan‡, Shihui Zheng, Yuting Chen, Zhen Zheng, Yangzhong Liu* and Guangming Huang*. 
 									<a href="https://link.springer.com/article/10.1007%2Fs13361-017-1789-6"><U>The effect of salts in promoting specific 
 									and competitive interactions between zinc finger proteins and metals.
@@ -125,7 +129,8 @@
 									</a></U> <strong><i>Chem. Commun. </i></strong> 2017, 53, 3567-3570. </p>
 									<p><strong>9</strong>. <strong>Gongyu Li</strong>, Siming Yuan, Yang Pan, Yangzhong Liu and Guangming Huang*.  
 									<a href="http://pubs.acs.org/doi/abs/10.1021/acs.analchem.6b00032"><U>Binding states of protein-metal complexes in cells.
-									</a></U> <strong><i>Anal. Chem. </i></strong> 2016, 88, 10860-10866. </p>
+									</a></U> <strong><i>Anal. Chem. </i></strong> 2016, 88, 10860-10866. <br>
+									[<i><strong><font color='red'>In-cell MS: Mechanism + Application</font></strong></i>.]</p>
 									<p><strong>8</strong>. Yue Yin, <strong>Gongyu Li</strong>, Yafeng Guan and Guangming Huang*. 
 									<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/rcm.7621"><U>Sheathless interface to match 
 									flow rate of capillary electrophoresis with electrospray mass spectrometry using regular-sized capillary.
