--- a/research.html
+++ b/research.html
@@ -80,6 +80,45 @@
 									Dr. Li is ambitious to combine microelectrophoresis-equipped in-cell MS with gas-phase structural tool, 
 									IM-MS, serving as an emerging alternative to probe more structural details of native proteins 
 									directly from living cells.</p>
+									<p>While Dr. Li is much interested in serving as human disease fighter, he believes the high-quality 
+									technological and analytical developments are of most fundamental and prerequisite importance before 
+									biologist and us can take any further actions facing cutting-edge challenges. Photochemical reactions (PCRs) 
+									have long been widely involved in many aspects from fundamental research to industry-wide applications. 
+									In another paper (Li et al. Nat. Commun. 2019, 10, 4697, FEATURED by Nature Communications Editors HIGHLIGHTS), 
+									he demonstrated the suitability and possibility to adapt nanosecond PCR (nsPCR) with mass spectrometry (MS) 
+									for multiple analytical measurements and biological applications. This development has enabled sample separation, 
+									MS ionization, and chemical reaction to be integrated into a localized space and achieved in a few nanosecond 
+									time scale. </p>
+									<p>Simultaneous protein identifications and their structural probing are frequently beset with tedious, 
+									multistep and structural perturbing sample preparations. The resultant relatively independent workflows 
+									for each other have thus discouraged their applications in rapid and reliable probing of biological and 
+									medical events. In this work, Dr. Li presented a “Two-Birds-With-One-Stone” photochemical strategy for a 
+									trade-off between large protein structural probing and on-demand matrix removal. The nsPCR is designed to 
+									enable simultaneous high-throughput, highly efficient protein labeling and on-demand matrix removal at nanosecond 
+									timescale and micrometer confined environment. The labeling occurs between the nsPCR product, 2-nitrosobenzoic anion (NS-), 
+									and primary amine groups at the N-terminus and lysine residues of proteins. The on-demand matrices removal benefits from the 
+									composite effects of local pH-jump effect, photochemical microscale electrophoresis and microscale thermophoresis. 
+									The labeling efficiency for various sample types has been demonstrated to be as high as 90% with a high-throughput feature. 
+									As a proof-of-concept demonstration, the nsPCR has also revealed the stabilizing effects of terminal sialylation on glycoprotein 
+									3D structures for the first time, which offers unique features and capabilities that cannot be readily achieved using a typical 
+									gas-phase structural analysis tool, ion mobility-mass spectrometry.</p>
+									<p>The key idea of nsPCR stemmed from previous use of photoactive compound 2-nitrobenzaldehyde (NBA), which releases 
+									a proton upon UV laser irradiation (J. Am. Chem. Soc. 2016, 138, 5363), and generates amine reactive species. 
+									Inspired by this JACS paper, Dr. Li began to explore its utility in matrix-assisted desorption ionization (MALDI)-MS 
+									in terms of alleviating ion suppression effects. Notably, Dr. Li has been long interested in improving methods for 
+									in situ identification and visualization of neuropeptides and proteins directly from multiple tissue samples, which 
+									is often plagued by ion suppression effects. Based on the past experience on ion suppression effects in both ESI 
+									(J. Mass Spectrom. 2014, 49, 639) and MALDI systems (Rapid Commun. Mass Spectrom. 2019, 33, 327), Dr. Li was excited 
+									to observe signal enhancements with the help of NBA modification for numerous biomolecules, initially focusing on 
+									neuropeptides and large proteins. Aside from signal improvement, a more intriguing observation was the detection of 
+									several new peaks generated from the mixed MALDI-MS cocktail. Further examination revealed that these additional peaks 
+									were due to specific NBA labeling of primary amine groups at the N terminus and lysine residues.</p>
+									<p>We envision many more applications will be easily established based on the unique feature of NBA-based nsPCR, and 
+									further development of more suitable systems to initiate nsPCR will greatly expand its general applicability as a 
+									rapid and high-throughput structural probe. Taken together, these features of nsPCR, coupling with different MS 
+									instrumentation platforms, would enable a broad range of biological applications that could benefit from in situ and 
+									rapid structural probing of various biomolecules from diverse set of samples, including single cells and comparative 
+									biological tissues from healthy and disease conditions.</p>
 									
 									<h3><U><strong><font color='green'>Lossless: AIU/AIF IM-MS</font></strong></U></h3>									
 									<p>MS-based composite strategies have considerably dominated gas-phase glycoprotein 3D structural analysis due to 
