--- a/research.html
+++ b/research.html
@@ -53,7 +53,7 @@
 										<h2><strong><font color='red'>Rapid</font> + <font color='green'>Lossless</font> + <font color='blue'>High-resolution</font> +++ </strong> </h2>
 									</header>
 									<a class="image featured"><img src="images/limslab_logo_full_202010.jpg" width="50%" height="50%" alt="" /></a>
-									<h3><U><strong><font color='red'>Rapid: In-cell MS</font></strong></U></h3>
+									<h3><U><strong><font color='red'>Rapid: In-cell MS + Nanosecond Photochemical Reaction</font></strong></U></h3>
 									<p>Dr. Li has the long-standing research interest focusing on the development 
 									and application of ultrafast separation techniques capable of in situ purification 
 									and identification of native proteins directly from living cells. As such, one needs 
@@ -61,7 +61,7 @@
 									target proteins, where the separation time scale should be as short as possible to 
 									maintain the biologically relevant structural information. To achieve this goal, 
 									he has developed a new in-solution separation method based on millisecond micro-electrophoresis 
-									and integrated into MS called in-cell MS (Li et al. Anal. Chem. 2016, 88, 10860-10866), 
+									and integrated into MS called <strong>in-cell MS</strong> (Li et al. Anal. Chem. 2016, 88, 10860-10866), 
 									and has demonstrated its utility for several protein systems directly from living cells 
 									(Li et al. Anal. Chem. 2018, 90, 3409-3415). In this manner Dr. Li has assembled both continuous, 
 									millisecond electrophoretic separation and online electroporation-induced protein release into a 
@@ -82,10 +82,10 @@
 									directly from living cells.</p>
 									<p>While Dr. Li is much interested in serving as human disease fighter, he believes the high-quality 
 									technological and analytical developments are of most fundamental and prerequisite importance before 
-									biologist and us can take any further actions facing cutting-edge challenges. Photochemical reactions (PCRs) 
+									biologist and us can take any further actions facing cutting-edge challenges. <strong>Photochemical reactions (PCRs)</strong> 
 									have long been widely involved in many aspects from fundamental research to industry-wide applications. 
 									In another paper (Li et al. Nat. Commun. 2019, 10, 4697, FEATURED by Nature Communications Editors HIGHLIGHTS), 
-									he demonstrated the suitability and possibility to adapt nanosecond PCR (nsPCR) with mass spectrometry (MS) 
+									he demonstrated the suitability and possibility to adapt <strong>nanosecond PCR (nsPCR)</strong> with mass spectrometry (MS) 
 									for multiple analytical measurements and biological applications. This development has enabled sample separation, 
 									MS ionization, and chemical reaction to be integrated into a localized space and achieved in a few nanosecond 
 									time scale. </p>
