--- a/research.html
+++ b/research.html
@@ -134,12 +134,12 @@
 									adds uncertainties of the structural gaps between these two phases, but also increases the time cost and degrades 
 									the confidence of gas-phase structural measurements.</p>
 									<p>To effectively and confidently dissect the sialylation effects on the overall 3D arrangements of glycoproteins 
-									with high-level microheterogeneity, the power of Native IM-based Lossless Strcutural MS (LSMS) strategy is 
+									with high-level microheterogeneity, the power of Native IM-based <strong>Lossless Strcutural MS (LSMS)</strong> strategy is 
 									demonstrated on a model carrier glycoprotein TF. To overcome the barrier of multistep, time-consuming 
 									charge-selection/optimization processes and charge-bias effects on protein structures, the LSMS strategy 
 									adopts a “charge selection-free” concept, in which all forms of protein ions’ structures and topologies 
 									are accounted for, and no precursor ion selection is mandatory. Namely, all ions are diverted into the activation cell. 
-									In this way, we manage to perform all ion unfolding/fragmentation (AIU/AIF) sequentially in a charge-independent manner 
+									In this way, we manage to perform <strong>all ion unfolding/fragmentation (AIU/AIF)</strong> sequentially in a charge-independent manner 
 									on sialylated glycoproteins. The LSMS additionally relies on the further modifications of data visualization and 
 									quantitative characterization based on the CIUSuite and UniDec, which allow for not only the reliable tracking of rapid, 
 									efficient and in situ releasing of sialic acids and the simultaneous, charge-independent stepwise unfolding of native-like 
@@ -200,7 +200,7 @@
 									3D scattering space. Furthermore, Dr. Li decided to use the spatial distance in this 3D scattering space to quantitatively characterize 
 									the D/L Structural Difference (DLSD). The DLSD method has now been proven very useful in this type of evaluations. We also adopted the 
 									same conception for Aβ oligomer chiral amplification and quantitative characterization. The authors named the whole set of this innovative 
-									IM-MS-based analytical strategy as integrative chirality anatomy platform (iCAP, Figure 2).</P>
+									IM-MS-based analytical strategy as <strong>integrative chirality anatomy platform (iCAP</strong>, Figure 2).</P>
 									<p>Looking into the near future, Dr. Li plans to extend the fragment-based in vitro study to full-length Aβ in vivo exploration, 
 									starting with some in cell tests. Notably, we anticipate combining this iCAP conception with our previous D-amino acid residue 
 									localization method (Anal. Chem. 2014, 86, 2972). This combined follow-up study can contribute to a systematic interrogation of 
